Bug 491209 - Adding global suppression in diagnostics crash Kate
Summary: Adding global suppression in diagnostics crash Kate
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.5
Platform: Slackware Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-08-03 08:49 UTC by Eduardo
Modified: 2024-08-25 16:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eduardo 2024-08-03 08:49:04 UTC
Application: kate (23.08.5)

Qt Version: 5.15.14
Frameworks Version: 5.116.0
Operating System: Linux 6.9.12 x86_64
Windowing System: X11
Distribution: "Slackware Linux"
DrKonqi: 5.27.11 [KCrashBackend]

-- Information about the crash:
When editing a text in LaTeX some errors and warnings are shown in diagnostics area. I've got a lot of "Unused label" so I'd like hide them globally to see other warnings, errors and info messages. Kate crash everytime when I right-click on the info message and select the option "add global suppression". This doesn't happen if I select "add local suppression".

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f14677dcf60 in ?? () from /usr/lib64/libkateprivate.so.23.08.5
#5  0x00007f1464efa72e in ?? () from /usr/lib64/libQt5Core.so.5
#6  0x00007f1465d69a12 in QAction::triggered(bool) () from /usr/lib64/libQt5Widgets.so.5
#7  0x00007f1465d6c3d0 in QAction::activate(QAction::ActionEvent) () from /usr/lib64/libQt5Widgets.so.5
#8  0x00007f1465ee45f2 in ?? () from /usr/lib64/libQt5Widgets.so.5
#9  0x00007f1465eebf93 in ?? () from /usr/lib64/libQt5Widgets.so.5
#10 0x00007f1465dae998 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#11 0x00007f1465d7006e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#12 0x00007f1465d77d71 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#13 0x00007f1464ec3868 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#14 0x00007f1465d75ecb in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib64/libQt5Widgets.so.5
#15 0x00007f1465dc7a87 in ?? () from /usr/lib64/libQt5Widgets.so.5
#16 0x00007f1465dca4ff in ?? () from /usr/lib64/libQt5Widgets.so.5
#17 0x00007f1465d7006e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#18 0x00007f1464ec3868 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#19 0x00007f146534f18b in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#20 0x00007f1465321f6c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#21 0x00007f14607a868a in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#22 0x00007f14611143dd in ?? () from /usr/lib64/libglib-2.0.so.0
#23 0x00007f1461117327 in ?? () from /usr/lib64/libglib-2.0.so.0
#24 0x00007f146111790c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#25 0x00007f1464f1a339 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#26 0x00007f1464ec2412 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#27 0x00007f1464eca400 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#28 0x0000000000409e21 in ?? ()
#29 0x00007f1464429d07 in __libc_start_call_main () from /lib64/libc.so.6
#30 0x00007f1464429dc5 in __libc_start_main_impl () from /lib64/libc.so.6
#31 0x000000000040bb71 in ?? ()
[Inferior 1 (process 4270) detached]

Reported using DrKonqi
Comment 1 Christoph Cullmann 2024-08-04 16:42:08 UTC
Could you try a more recent version? We did patch a lot in the last year.
Comment 2 Bug Janitor Service 2024-08-19 03:47:30 UTC
๐Ÿ›๐Ÿงน โš ๏ธ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Eduardo 2024-08-20 11:57:29 UTC
I've tried today's AppImage (kate-master-7758-linux-gcc-x86_64.AppImage) and the behavior is the same, but less important in both versions.
When I add a global suppression to a message (for example: "[texlab] Unused label") it disappears in that document, not in the rest of documents. So, when I try to do the same in other closed documents, kate dies.
If I open the next documents before trying to add the same global suppression, the message suddenly disappears for that document (not the others).
I don't know if it makes sense to clean all "[texlab] Unused label" messages in the diagnostics screen whenever a global suppression is added.
If it's not possible, it's OK for me. Now I understand how it works and this issue can be closed because there is a workaround for not killing Kate accidentally.
Comment 4 Bug Janitor Service 2024-08-24 14:26:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1567
Comment 5 Christoph Cullmann 2024-08-25 16:42:47 UTC
Git commit ddb4a1b6ceefb4d8b069fe14440263d0bb776bd8 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 25/08/2024 at 16:39.
Pushed by cullmann into branch 'master'.

Fix adding global suppression doesn't suppress existing diagnostics

We need to scan all the document nodes once global suppression changes to
suppress all matches. Also, try not to rely on Document pointer, we can
have diagnostics for files which are not open in the editor.

M  +5    -13   apps/lib/diagnostics/diagnostic_suppression.h
M  +32   -9    apps/lib/diagnostics/diagnosticview.cpp

https://invent.kde.org/utilities/kate/-/commit/ddb4a1b6ceefb4d8b069fe14440263d0bb776bd8